# ocaml-cordova-plugin-geolocation

./: .travis-ci.sh  META  Makefile  Makefile.conf  README.md  cordova-plugin-geolocation.opam  cordova_geolocation.mli  dune-project  geolocation_cordova.mli
.github/workflows/: main.yml
opam/: opam
src/: cordova_geolocation.mli  dune
test/: test.ml
