opam-version: "2.0"
name:         "ocaml-cordova-plugin-geolocation"
maintainer:   "Danny Willems <contact@danny-willems.be>"
authors:       "Danny Willems <contact@danny-willems.be>"
homepage:     "git+https://dannywillems/ocaml-cordova-plugin-geolocation"
bug-reports:  "git+https://dannywillems/ocaml-cordova-plugin-geolocation/issues"
dev-repo:     "git+https://dannywillems/ocaml-cordova-plugin-geolocation"
license:      "LGPL-3.0 with OCaml linking exception"
description: "Binding to the 'geolocation' cordova plugin using gen_js_api"
synopsis: "Binding to the 'geolocation' cordova plugin using gen_js_api"
version:      "1.1"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" {>= "2.8"}
  "gen_js_api"
  "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
  "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
]
